--- a/Multi User Login/style.css
+++ b/Multi User Login/style.css
@@ -1,14 +1,13 @@
-
-
 html, body {
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0 auto;
     min-height: 100vh;
     width: 100vw;
+    background-image: url("computer-avid-technology-simple-wallpaper-thumb.jpeg");
     background-size: cover;
-    background-image: url("https://image.freepik.com/foto-gratis/fondo-abstracto-3d-poli-baja_1048-9819.jpg");
     background-repeat: no-repeat;
+    
   }
   
   .text-center {
@@ -29,7 +28,7 @@ html, body {
     position: fixed;
     z-index: 999;
     right: 0;
-    width: 250px;
+    width: 270px;
     height: 100vh;
     padding: 15px 0;
     justify-content: space-between;
@@ -50,7 +49,7 @@ html, body {
       cursor: pointer;
     }
     &, #logoCSS3, .element, .menu-btn {
-      color: #FFFFFF;
+      color: #070707;
     }
     #logoCSS3, .element, .menu-container-btn, .menu-toggle-btn {
       position: relative;
@@ -79,7 +78,8 @@ html, body {
         text-decoration: none;
         padding: 10px 0 10px 10px;
         &:hover {
-          background-color: #FFC107;
+          background-color: #474747;
+          color: aliceblue;
         }
       }
     }
@@ -87,12 +87,12 @@ html, body {
       overflow: hidden;
       width: 70px;
       padding: 35px 0;
-      box-shadow: 609px 0 0 600px  #FFA000;
+      box-shadow: 609px 0 0 600px  #e0dbc1;
   
       .menu-toggle-btn {
         height: 70px;
         border-radius: 0 50% 50% 0;
-        box-shadow: 43px 0 0 0  #FFA000;
+        box-shadow: 43px 0 0 0  #e0dbc1;
   
         &:after, &:before {
           z-index: -1;
@@ -104,19 +104,19 @@ html, body {
         &:after {
           top: 0;
           border-radius: 0 0 0 100%;
-          box-shadow: 8px -43px 0px 0px  #FFA000;
+          box-shadow: 8px -43px 0px 0px  #e0dbc1;
         }
         &:before {
           bottom: -86px;
           border-radius: 100% 0 0 0;
-          box-shadow: 8px -43px 0px 0px  #FFA000;
+          box-shadow: 8px -43px 0px 0px  #e0dbc1;
         }
         .menu-btn {
           text-shadow: 0 0 5px black;
           padding: 14px 16px;
           left: 14px;
           top: 13px;
-          background-color:  #FFA000;
+          background-color:  #e0dbc1;
           border: none;
           border-radius: 50%;
         }
@@ -141,12 +141,12 @@ html, body {
       opacity: 0;
     }
     .menu-container-btn {
-      box-shadow: 640px 0 0 600px  #FFA000;
+      box-shadow: 640px 0 0 600px  #e0dbc1;
   
       .menu-toggle-btn {
         border-radius: 50% 0 0 50%;
-        background: radial-gradient(ellipse at center,  rgba(0, 0, 0, 0) 0%,  rgba(0, 0, 0, 0) 55%,  #FFA000 56%,  #FFA000 100%);
-        box-shadow: 76px 0 0 50px  #FFA000;
+        background: radial-gradient(ellipse at center,  rgba(0, 0, 0, 0) 0%,  rgba(0, 0, 0, 0) 55%,  #e0dbc1 56%,  #e0dbc1 100%);
+        box-shadow: 76px 0 0 50px  #e0dbc1;
   
         &:after, &:before {
           left: 21px;
@@ -155,16 +155,16 @@ html, body {
         &:after {
           top: -48px;
           border-radius: 0 0 100% 0;
-          box-shadow: 12px 1px 0 10px  #FFA000;
+          box-shadow: 12px 1px 0 10px  #e0dbc1;
         }
         &:before {
           top: 68px;
           border-radius: 0 100% 0 0;
-          box-shadow: 12px 3px 0 12px  #FFA000;
+          box-shadow: 12px 3px 0 12px  #e0dbc1;
         }
         .menu-btn {
           background-color:  rgba(0, 0, 0, 0);
-          box-shadow: 0 0 0 12px  #FFA000;
+          box-shadow: 0 0 0 12px  #e0dbc1;
         }
       }
     }
